src/objects/Client_Program__c.object
<CustomObject>
    <fields>
        <fullName>Peak_day_email_to_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peak day email to 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Peak day email to 2)</relationshipLabel>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_day_email_to_2_email3__c</fullName>
        <formula>Peak_day_email_to_3__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak day email to 2 email3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_day_email_to_2_email__c</fullName>
        <formula>Peak_day_email_to_2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak day email to 2 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_day_email_to_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peak day email to 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Peak day email to 3)</relationshipLabel>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_days_next_month__c</fullName>
        <formula>Operator_Program__r.of_Peak_Days_Next_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak days next month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Peak_email_to_1_goes_by__c</fullName>
        <formula>Peak_day_email_to_1__r.Goes_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak email to 1 goes by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak_email_to_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Peak day email to 4</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Peak email to 4)</relationshipLabel>
        <relationshipName>Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peak_email_to_4_email__c</fullName>
        <formula>Peak_email_to_4__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Peak email to 4 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal__c</fullName>
        <inlineHelpText>For FlexJet Portal</inlineHelpText>
        <label>Portal</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aviation Portfolio</fullName>
                </value>
                <value>
                    <fullName>Aviation Portfolio -2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Program_Balance_Email_4__c</fullName>
        <label>Program Balance email to 4</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Balance_email_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Balance email 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Program Balance email 3)</relationshipLabel>
        <relationshipName>Programs8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Balance_email_to_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Balance email to 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Program Balance email to 1)</relationshipLabel>
        <relationshipName>Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <inlineHelpText>Operator|Annual Hours|Aircraft Type|Product Type (Share/Lease/Card)</inlineHelpText>
        <label>Program Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_balance_email_1_email__c</fullName>
        <formula>Program_Balance_email_to_1__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program balance email 1 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_balance_email_1_goes_by__c</fullName>
        <formula>Program_Balance_email_to_1__r.Goes_By__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program balance email 1 goes by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_balance_email_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Balance email 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Program balance email 2)</relationshipLabel>
        <relationshipName>Programs7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_balance_email_3_email__c</fullName>
        <formula>Program_Balance_email_3__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program balance email 3 email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_balance_email_to_2__c</fullName>
        <formula>Program_balance_email_2__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program balance email to 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <formula>( Total_Membership_Deposits__c + Total_Membership_Bonuses__c)  - Total_Flight_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarketing_Fee__c</fullName>
        <formula>Remarketing__c  *  Current_Fair_Market_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remarketing %* Current Market Value</inlineHelpText>
        <label>Remarketing Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarketing__c</fullName>
        <label>Remarketing %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rolled_Up_Allotted_Hours__c</fullName>
        <label>Rolled Up Allotted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Programs (Sales Contact)</relationshipLabel>
        <relationshipName>Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Security_Deposit_Amount__c</fullName>
        <label>Security Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32728</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_Stage_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEST__c</fullName>
        <formula>HYPERLINK(&quot;https://composer.congamerge.com/composer8/index.html?SessionId=&quot; 

+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + Auto_Peak_Day_Email__c , &quot;TEST&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Email__c</fullName>
        <label>Booking Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Termination_Notes__c</fullName>
        <label>Termination Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Notification_Date__c</fullName>
        <formula>Contract_Expiration__c -  Operator_Program__r.Days_notice_required_before_auto_renew__c -3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Termination Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Allotted_Hours__c</fullName>
        <inlineHelpText>Total hours on contract including carry-over for the entire contract period (e.g. 5 years)</inlineHelpText>
        <label>Total Allotted Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Bonus_Hours__c</fullName>
        <label>Total Bonus Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Entire_Contract__c</fullName>
        <label>Total Days (Entire Contract)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Flight_Spend__c</fullName>
        <label>Grand Total Flight Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Flown_Hours__c</fullName>
        <label>Grand Total Flown Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Accrued_to_date__c</fullName>
        <formula>IF( Contract_Expiration__c  &gt; today(),(today()- Contract_Start__c )* Accrual_per_Day__c, Total_Allotted_Hours__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Accrued to date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_MMF_Accrued_to_Date__c</fullName>
        <label>Total MMF Accrued to Date</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Membership_Bonuses__c</fullName>
        <label>Total Membership Bonuses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Membership_Deposits__c</fullName>
        <label>Total Membership Deposits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Purchased_Hours__c</fullName>
        <label>Total Purchased Hours</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Client_Decision__c</fullName>
        <label>1st Min Comm Client Decision?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>TALK LATER about it</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Client_Notification_Date__c</fullName>
        <formula>Minimum_Commit_Notification_Date__c   -60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Min Comm Client Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Termination_Client_Decision__c</fullName>
        <label>1st Termination Client Decision?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>TALK LATER about it</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Termniation_Client_Notification_Dat__c</fullName>
        <formula>Termination_Notification_Date__c -60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Termniation Client Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Client_Decision__c</fullName>
        <label>2nd Min Comm Client Decision?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>TALK LATER about it</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Min_Comm_Client_Notification_Date__c</fullName>
        <formula>Minimum_Commit_Notification_Date__c -30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Min Comm Client Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2nd_Termination_Client_Decision__c</fullName>
        <label>2nd Termination Client Decision?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>TALK LATER about it</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2nd_Termination_Client_Notification_Dat__c</fullName>
        <formula>Termination_Notification_Date__c -30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Termination Client Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Client_Decison__c</fullName>
        <label>Final Min Comm Client Decison?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES start the process</fullName>
                </value>
                <value>
                    <fullName>NO keep it going</fullName>
                </value>
                <value>
                    <fullName>AvP Missed this date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Years_in_contract__c</fullName>
        <formula>Days_in_Contract__c /365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years in contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_Asset_Ownership__c</fullName>
        <formula>(IF(Contract_Expiration__c &lt; TODAY (),Contract_Expiration__c - Original_purchase_of_asset_Date__c , TODAY () - Original_purchase_of_asset_Date__c )/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years of Asset Ownership</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Peak_Days_Next_Month__c</fullName>
        <inlineHelpText>For automatic peak day conga email solution</inlineHelpText>
        <label># of Peak Days Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>step_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step Lookup</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Client Program</relationshipLabel>
        <relationshipName>CO_Client_Program</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>Default_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Program_Name__c</columns>
        <columns>Account__c</columns>
        <columns>Operator_Program__c</columns>
        <columns>Contract_Start__c</columns>
        <columns>Contract_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <label>Default View</label>
    </listViews>
    <listViews>
        <fullName>Fractional_Shares</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Entity_Name__c</columns>
        <columns>Aircraft__c</columns>
        <columns>Annual_Hours_Contracted__c</columns>
        <columns>Contract_Start__c</columns>
        <columns>Contract_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Client_Program__c.Fractional_Share</value>
        </filters>
        <label>Fractional Shares</label>
    </listViews>
    <nameField>
        <label>Contract ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Charter_Deposit_Program</fullName>
        <active>true</active>
        <label>Charter Deposit Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Day_Share</fullName>
        <active>true</active>
        <label>Fractional Equity Interest (Day Share)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fractional_Lease</fullName>
        <active>true</active>
        <label>Fractional Lease</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fractional_Share</fullName>
        <active>true</active>
        <label>Fractional Share</label>
    </recordTypes>
    <recordTypes>
        <fullName>JetcardMembership</fullName>
        <active>true</active>
        <label>Jetcard/Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership_with_Multiple_Hourly_Rates</fullName>
        <active>true</active>
        <label>Membership with Multiple Hourly Rates</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>